--- a/static/work-log-timer/package.json
+++ b/static/work-log-timer/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@atlaskit/css-reset": "^6.6.2",
     "@forge/bridge": "3.5.0",
+    "axios": "^1.7.7",
     "react": "^16",
     "react-dom": "^16",
     "react-icons": "^5.3.0",
