--- a/static/work-log-timer/package.json
+++ b/static/work-log-timer/package.json
@@ -5,14 +5,18 @@
   "homepage": ".",
   "dependencies": {
     "@atlaskit/css-reset": "^6.6.2",
-    "@forge/bridge": "^3.5.0",
-    "axios": "^1.7.7",
-    "react": "^16",
-    "react-dom": "^16",
+    "@forge/bridge": "^3.2.0",
+    "prop-types": "^15.8.1",
+    "react": "^18",
+    "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "reactjs-popup": "^2.0.6"
+    "react-router-dom": "^6.21.0",
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "autoprefixer": "^10.4.16",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
